--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -19,11 +19,10 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-  </head>
+    <script src="app/app.js"></script>
+</head>
 
-  <body ng-app="starter">
-    <ion-nav-view></ion-nav-view>
-  </body>
+<body ng-app="eliteApp">
+<ion-nav-view></ion-nav-view>
+</body>
 </html>
