--- a/www/app/home/home.html
+++ b/www/app/home/home.html
@@ -1,6 +1,6 @@
-<ion-nav-bar class="bar-balanced">
+<ion-header-bar class="bar-balanced">
     <h1 class="title">Elite Schedule</h1>
-</ion-nav-bar>
+</ion-header-bar>
 
 <ion-tabs class="tabs-energized tabs-icon-top">
     <ion-tab title="Leagues" icon="ion-home" href="#/home/leagues">
