--- a/www/app/locations/locations.html
+++ b/www/app/locations/locations.html
@@ -1,5 +1,7 @@
-<ion-view>
-  <ion-content class="has-header">
-    <h1>Locations</h1>
-  </ion-content>
+<ion-view ng-controller="LocationsCtrl as vm">
+    <ion-content class="has-header">
+        <div class="list">
+            <div class="item" ng-repeat="location in vm.locations">{{location.name}}</div>
+        </div>
+    </ion-content>
 </ion-view>
