--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,12 @@
     <script src="app/app.js"></script>
     <script src="js/controllers.js"></script>
 
+    <script src="app/services/eliteApi.js"></script>
     <script src="app/teams/team-detail-ctrl.js"></script>
+    <script src="app/home/leagues-ctrl.js"></script>
+    <script src="app/locations/locations-ctrl.js"></script>
+    <script src="app/teams/teams-ctrl.js"></script>
+    <script src="app/standings/standings-ctrl.js"></script>
 </head>
 
 <body ng-app="eliteApp">
