--- a/www/app/teams/team-detail.html
+++ b/www/app/teams/team-detail.html
@@ -2,27 +2,32 @@
     <ion-content class="has-header">
 
         <div class="card">
-            <!--<div class="item">
+            <div class="item item-button-right">
                 <h2>Record: {{vm.teamStanding.wins}}--{{vm.teamStanding.losses}}</h2>
-            </div>-->
+                <button class="button button-positive icon-left" ng-click="vm.toggleFollow()"
+                        ng-class="{'ion-checkmark-round': vm.following,
+                        'ion-plus-round button-outline': !vm.following}">
+                    {{vm.following ? "Following": "Not Following"}}
+                </button>
+            </div>
 
             <!--<div class="item item-checkbox">-->
-                <!--<h2>{{vm.following ? "Following": "Not Following"}}</h2>-->
-                <!--<label class="checkbox">-->
-                    <!--<input type="checkbox" ng-model="vm.following"/>-->
-                <!--</label>-->
+            <!--<h2>{{vm.following ? "Following": "Not Following"}}</h2>-->
+            <!--<label class="checkbox">-->
+            <!--<input type="checkbox" ng-model="vm.following"/>-->
+            <!--</label>-->
             <!--</div>-->
 
-            <div class="item item-toggle">
-                <h2>{{vm.following ? "Following": "Not Following"}}</h2>
-                <label class="toggle toggle-energized">
-                    <input type="checkbox" ng-model="vm.following"/>
+            <!--<div class="item item-toggle">-->
+            <!--<h2>{{vm.following ? "Following": "Not Following"}}</h2>-->
+            <!--<label class="toggle toggle-energized">-->
+            <!--<input type="checkbox" ng-model="vm.following"/>-->
 
-                    <div class="track">
-                        <div class="handle"></div>
-                    </div>
-                </label>
-            </div>
+            <!--<div class="track">-->
+            <!--<div class="handle"></div>-->
+            <!--</div>-->
+            <!--</label>-->
+            <!--</div>-->
         </div>
 
         <div class="list">
