--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,8 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/lodash/dist/lodash.min.js"></script>
     <script src="lib/angular-cache/dist/angular-cache.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
