--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <script src="app/standings/standings-ctrl.js"></script>
     <script src="app/game/game-ctrl.js"></script>
     <script src="app/home/my-teams-ctrl.js"></script>
+    <script src="app/locations/location-map-ctrl.js"></script>
 </head>
 
 <body ng-app="eliteApp">
