--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <script src="lib/angular-cache/dist/angular-cache.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
+    <script src="lib/showdown/compressed/showdown.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -36,6 +37,8 @@
     <script src="app/game/game-ctrl.js"></script>
     <script src="app/home/my-teams-ctrl.js"></script>
     <script src="app/locations/location-map-ctrl.js"></script>
+    <script src="app/rules/rules-ctrl.js"></script>
+    <script src="app/directives/markdown.js"></script>
 </head>
 
 <body ng-app="eliteApp">
