--- a/www/app/rules/rules.html
+++ b/www/app/rules/rules.html
@@ -1,5 +1,5 @@
 <ion-view title="Rules" ng-controller="RulesCtrl as vm">
     <ion-content class="has-header padding">
-        <div markdown="{{vm.mainContent}}"></div>
+        <div class="allow-bullets" markdown="{{vm.mainContent}}"></div>
     </ion-content>
 </ion-view>
