--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <script src="lib/showdown/compressed/showdown.js"></script>
 
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
