--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
     <script src="app/locations/location-map-ctrl.js"></script>
     <script src="app/rules/rules-ctrl.js"></script>
     <script src="app/directives/markdown.js"></script>
+    <script src="app/dialogs/dialogs-ctrl.js"></script>
 </head>
 
 <body ng-app="eliteApp">
