--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
     <script src="app/rules/rules-ctrl.js"></script>
     <script src="app/directives/markdown.js"></script>
     <script src="app/dialogs/dialogs-ctrl.js"></script>
+    <script src="app/vibration/vibration-ctrl.js"></script>
 </head>
 
 <body ng-app="eliteApp">
