cordova camera, device info, network status, barcode scanner

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,10 @@
     <script src="app/directives/markdown.js"></script>
     <script src="app/dialogs/dialogs-ctrl.js"></script>
     <script src="app/vibration/vibration-ctrl.js"></script>
+    <script src="app/network/network-ctrl.js"></script>
+    <script src="app/device/device-ctrl.js"></script>
+    <script src="app/camera/camera-ctrl.js"></script>
+    <script src="app/barcode-scanner/barcode-scanner-ctrl.js"></script>
 </head>
 
 <body ng-app="eliteApp">
